--- a/index.html
+++ b/index.html
@@ -4,14 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Devenir un homme 'vrai'</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+      background-color: #fdfdfd;
+      color: #111;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 20px 0;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+    a {
+      color: #1a0dab;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .info {
+      font-size: 18px;
+      margin: 10px 0;
+    }
+    .titre {
+      font-size: 32px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .sous-titre {
+      font-size: 22px;
+      font-style: italic;
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Bienvenue sur mon site !</h1>
-  <h2>Mon ebook : <em>Devenir un homme 'vrai'</em></h2>
-  <p>✅ Apprends à devenir un homme fort, responsable et respecté.</p>
-  <p>💰 Prix : 2 000 FCFA</p>
-  <p>📞 WhatsApp : <a href="https://wa.me/22658856876">+226 58 85 68 76</a></p>
-  <p>📱 Paiement Orange Money / Wave : +226 74 71 75 86</p>
-  <p>💳 PayPal : doambakevin0226@icloud.com</p>
+
+  <div class="titre">Bienvenue sur mon site !</div>
+  <div class="sous-titre">Mon ebook : <strong><em>Devenir un homme 'vrai'</em></strong></div>
+
+  <img src="989ECC85-91F6-421E-8283-B9E89812C201.png" alt="Couverture de l'ebook">
+
+  <div class="info">✅ Apprends à devenir un homme fort, responsable et respecté.</div>
+  <div class="info">💰 Prix : 2 000 FCFA</div>
+  <div class="info">📞 WhatsApp : <a href="https://wa.me/22658856876">+226 58 85 68 76</a></div>
+  <div class="info">📲 Paiement Orange Money / Wave : <a href="tel:+22674717586">+226 74 71 75 86</a></div>
+  <div class="info">💳 PayPal : <a href="mailto:doambakevin0226@icloud.com">doambakevin0226@icloud.com</a></div>
+
 </body>
 </html>
